--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,12 +33,12 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:db.sqlite"
+#db.default.driver=org.sqlite.JDBC
+#db.default.url="jdbc:sqlite:db.sqlite"
 db.default.user=sa
 db.default.password=sa
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
