increase log level

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,9 +65,9 @@ ebean.default="models.*"
 logger.root=INFO
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
 
-application.log=INFO
+application.log=DEBUG
