--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=ERROR, Console
 
-log4j.logger.play=INFO
+log4j.logger.play=DEBUG
 
 # Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
