--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,14 +32,21 @@ application.langs="en"
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-db.default.driver=org.sqlite.JDBC
-db.default.url="jdbc:sqlite:db.sqlite"
+
+# Evolutions should take care of initialising the database
+# regardless of its type. It's necessary to at least once
+# run "play run" in the project directory for that to happen.
+# If database type is changed it needs to be re-run.
+
 db.default.user=sa
 db.default.password=sa
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
-#
+
+#db.default.driver=org.sqlite.JDBC
+#db.default.url="jdbc:sqlite:db.sqlite"
+
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play;MODE=Oracle"
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
 
@@ -71,3 +78,6 @@ logger.play=DEBUG
 logger.application=DEBUG
 
 application.log=DEBUG
+
+db.default.logStatements=true
+logger.com.jolbox=DEBUG
