--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,6 +50,12 @@ db.default.url="jdbc:h2:mem:play;MODE=Oracle"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
 
+#db.default.driver="oracle.jdbc.OracleDriver"
+#db.default.url="jdbc:oracle:thin:@localhost:1521/play"
+#db.default.user="play"
+#db.default.pass="play"
+#jpa.dialect=org.hibernate.dialect.Oracle10gDialect
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
