fix connection string

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,7 +51,7 @@ db.default.url="jdbc:h2:mem:play;MODE=Oracle"
 db.default.jndiName=DefaultDS
 
 #db.default.driver="oracle.jdbc.OracleDriver"
-#db.default.url="jdbc:oracle:thin:@localhost:1521/play"
+#db.default.url="jdbc:oracle:thin:@localhost:1521:ex"
 #db.default.user="play"
 #db.default.pass="play"
 #jpa.dialect=org.hibernate.dialect.Oracle10gDialect
